feat: add recent posts endpoint to publish lambda
